added eletron platform

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "learners",
   "version": "0.0.1",
-  "author": "Ionic Framework",
+  "author": "VUSUMUZI GWALA AND LINDANI MBUYENI",
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
@@ -21,12 +21,14 @@
     "@angular/platform-browser": "^16.0.0",
     "@angular/platform-browser-dynamic": "^16.0.0",
     "@angular/router": "^16.0.0",
+    "@capacitor-community/electron": "^5.0.1",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.4.2",
     "@capacitor/haptics": "5.0.6",
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "electron-builder": "^24.9.1",
     "ionicons": "^7.0.0",
     "pdfmake": "^0.2.9",
     "rxjs": "~7.8.0",
@@ -43,7 +45,7 @@
     "@angular/cli": "^16.0.0",
     "@angular/compiler-cli": "^16.0.0",
     "@angular/language-service": "^16.0.0",
-    "@capacitor/cli": "5.4.2",
+    "@capacitor/cli": "^5.6.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/node": "^12.20.55",
