--- a/electron/package.json
+++ b/electron/package.json
@@ -1,7 +1,7 @@
 {
   "name": "learners",
   "version": "1.0.0",
-  "description": "this is the desktop app for widows for linda's driving school this app will be used to take test 3 TESTS these test will check te user readiness to write the actual learns licence",
+  "description": "Introducing the Linda's Driving School Desktop Application for Windows – an advanced tool meticulously designed to facilitate the assessment of user preparedness for obtaining a learner's license. This sophisticated application is specifically crafted to administer three comprehensive tests, each strategically curated to gauge the user's proficiency and readiness to undertake the official learner's license examination. Equipped with an intuitive interface, our desktop application ensures a seamless user experience while maintaining the utmost professionalism. The meticulously designed tests embedded within the application serve as a reliable benchmark, accurately evaluating the user's knowledge and understanding of crucial driving concepts. Designed to meet the highest standards of accuracy and reliability, the Linda's Driving School Desktop Application is an indispensable resource for aspiring drivers seeking to validate their comprehension and competence. Elevate your journey towards obtaining a learner's license with our cutting-edge desktop application, setting the standard for excellence in driving education.",
   "author": {
   "name": "Vusumuzi Gwala and Lindali Mbuyeni",
   "email": "vgwala149@gmail.com"
