--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "learners",
+  "name": "Linde's driving school",
   "version": "0.0.1",
   "author": "VUSUMUZI GWALA AND LINDANI MBUYENI",
   "homepage": "https://ionicframework.com/",
