--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "electron-builder": "^24.9.1",
     "ionicons": "^7.0.0",
     "pdfmake": "^0.2.9",
+    "prisma": "^5.8.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
